Add build configuration and dependencies for creating executable files

--- a/package.json
+++ b/package.json
@@ -41,7 +41,10 @@
     }
   },
   "dependencies": {
-    "electron-store": "^8.1.0"
+    "electron-store": "^8.1.0",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
+    "three": "^0.183.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.1",
